The accepted ADR stops overclaiming, and the parity checklist becomes a signoff record with every tick backed by something that ran
Three claims in ADR-009's Decision section described the draft rather than the shipped build: the real-Bazel surface is seven classes, not four (six whole plus RealBazelCliRunTest); no proto_library exists — one genrule runs the pinned exes directly; and CI does not assert the real-bazel classes ran — it excludes them visibly via --config=ci while developer machines run them, with loud skips as the anti-silent-drift guard. The plan's step rows repeating the four-classes and assert-in-workflow claims are corrected the same way, and its §4.2/§4.4 sketches now describe the shipped shared-test-lib-with-per-class-runtime-targets design and the bbv_real_bazel_test macro; the rc block gains the two most consequential shipped lines it omitted (-XepDisableAllChecks and the test_tmpdir relocation) with their reasons.

The §8 checklist is ticked only where evidence exists, each item citing the new §11 signoff record: inventory 216 classes / 1852 tests / 0 failures on both sides (counting logic now committed as tools/test_inventory.py, closing the checklist's own promise), the three proto sha256s, the GAV-set comparison against the deleted lockfiles reconstructed from git history (zero version mismatches; every delta a codegen/generator tool or a planned addition), the deny-mode smoke rehearsal through both launch paths (exit 0 twice), all seven real-Bazel classes passing with their run times, a double-clean-build deploy jar at the same sha256 twice, and the CppCompile aquery whose single hit — Bazel's own launcher_maker tool — is quoted verbatim rather than rounded to zero. Two items are marked not executed with reasons and follow-ups instead of ticked: the spike offscreen verdicts and the fresh-clone bazelisk-only build.

PM-Task: 20260824-2153/t2